--- a/world/frameworkintegration/PKGBUILD
+++ b/world/frameworkintegration/PKGBUILD
@@ -3,12 +3,13 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=frameworkintegration
-pkgver=6.14.0
+pkgver=6.15.0
 pkgrel=1
 pkgdesc='Framework providing components to allow applications to integrate with a KDE Workspace'
 arch=(x86_64)
 url='https://community.kde.org/Frameworks'
-license=(LGPL-2.0-only LGPL-3.0-only)
+license=(LGPL-2.0-only
+         LGPL-3.0-only)
 depends=(gcc-libs
          glibc
          kcolorscheme
@@ -21,12 +22,13 @@ depends=(gcc-libs
          qt6-base)
 makedepends=(appstream-qt
              extra-cmake-modules
-             packagekit-qt6)
+             packagekit-qt6
+             qt6-tools)
 optdepends=('appstream-qt: dependency resolving via AppStream'
             'packagekit-qt6: dependency resolving via AppStream')
 groups=(kf6)
 source=(https://download.kde.org/stable/frameworks/${pkgver%.*}/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('ea263722de4b37c8742a70ab057da062e5b71d0e08e986456a3dc44e20f003b7'
+sha256sums=('6e64870e5d3dcee2a7f7d0a509b5236667fa11f78dd38cd8923911f1ca7ba786'
             'SKIP')
 validpgpkeys=(53E6B47B45CEA3E0D5B7457758D0EE648A48B3BB # David Faure <faure@kde.org>
               E0A3EB202F8E57528E13E72FD7574483BB57B18D # Jonathan Esk-Riddell <jr@jriddell.org>
