--- a/world/grilo-plugins/.artixlinux/pkgbase.yaml
+++ b/world/grilo-plugins/.artixlinux/pkgbase.yaml
@@ -1,56 +1,60 @@
 ---
-pkgbase:
-  name: grilo-plugins
-  version: 1:0.3.16+r46+gea3afa8c-2
-  arch:
-    - x86_64
-  pkgname:
-    - grilo-plugins
 actions:
-  addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  addRepo: null
+  removeRepo: galaxy
+  triggersBuild: false
   triggersRebuild: false
-  triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoAdd: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
     version: 1:0.3.16+r46+gea3afa8c-2
     packages:
       - grilo-plugins-1:0.3.16+r46+gea3afa8c-2-x86_64.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
-    version: 1:0.3.16+r46+gea3afa8c-2
-    packages:
-      - grilo-plugins-1:0.3.16+r46+gea3afa8c-2-x86_64.pkg.tar.zst
+    version: null
+    packages: []
+    debug: []
 team: galaxy
