--- a/world/kcmutils/PKGBUILD
+++ b/world/kcmutils/PKGBUILD
@@ -3,7 +3,7 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=kcmutils
-pkgver=6.14.0
+pkgver=6.15.0
 pkgrel=1
 pkgdesc='Utilities for interacting with KCModules'
 arch=(x86_64)
@@ -26,11 +26,10 @@ depends=(gcc-libs
          qt6-declarative)
 makedepends=(doxygen
              extra-cmake-modules
-             qt6-doc
              qt6-tools)
 groups=(kf6)
 source=(https://download.kde.org/stable/frameworks/${pkgver%.*}/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('2336f05ee46668de2be70c301660c9d3a881c40046ef90d1205e408260b46005'
+sha256sums=('56e7a7648651ce9698ea7d1ff98b7fec6598111d37d2f28ae0d6547d3c98ff04'
             'SKIP')
 validpgpkeys=(53E6B47B45CEA3E0D5B7457758D0EE648A48B3BB # David Faure <faure@kde.org>
               E0A3EB202F8E57528E13E72FD7574483BB57B18D # Jonathan Esk-Riddell <jr@jriddell.org>
@@ -40,8 +39,7 @@ validpgpkeys=(53E6B47B45CEA3E0D5B7457758D0EE648A48B3BB # David Faure <faure@kde.
 build() {
   cmake -B build -S $pkgname-$pkgver \
     -DBUILD_TESTING=OFF \
-    -DCMAKE_INSTALL_LIBEXECDIR=lib \
-    -DBUILD_QCH=ON
+    -DCMAKE_INSTALL_LIBEXECDIR=lib
   cmake --build build
 }
 
