--- a/world/kidletime/PKGBUILD
+++ b/world/kidletime/PKGBUILD
@@ -3,7 +3,7 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=kidletime
-pkgver=6.14.0
+pkgver=6.15.0
 pkgrel=1
 pkgdesc='Monitoring user activity'
 arch=(x86_64)
@@ -16,7 +16,6 @@ makedepends=(doxygen
              extra-cmake-modules
              libxss
              plasma-wayland-protocols
-             qt6-doc
              qt6-tools
              qt6-wayland
              wayland-protocols)
@@ -28,7 +27,7 @@ optdepends=('libx11: XCB plugin'
             'wayland: Wayland plugin')
 groups=(kf6)
 source=(https://download.kde.org/stable/frameworks/${pkgver%.*}/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('16775b2bdc3efd54c65a96bce6f27a001d119905531d84bb23e23215a196ecb8'
+sha256sums=('08ec47248502cdc2c8a003b44b5936bfda9dae277a1adb921801892745e87cfe'
             'SKIP')
 validpgpkeys=(53E6B47B45CEA3E0D5B7457758D0EE648A48B3BB # David Faure <faure@kde.org>
               E0A3EB202F8E57528E13E72FD7574483BB57B18D # Jonathan Esk-Riddell <jr@jriddell.org>
@@ -37,8 +36,7 @@ validpgpkeys=(53E6B47B45CEA3E0D5B7457758D0EE648A48B3BB # David Faure <faure@kde.
 
 build() {
   cmake -B build -S $pkgname-$pkgver \
-    -DBUILD_TESTING=OFF \
-    -DBUILD_QCH=ON
+    -DBUILD_TESTING=OFF
   cmake --build build
 }
 
