--- a/world/kpeople/PKGBUILD
+++ b/world/kpeople/PKGBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Antonio Rojas <arojas@archlinux.org>
 
 pkgname=kpeople
-pkgver=6.14.0
+pkgver=6.15.0
 pkgrel=1
 pkgdesc='A library that provides access to all contacts and the people who hold them'
 arch=(x86_64)
@@ -19,12 +19,11 @@ depends=(gcc-libs
 makedepends=(doxygen
              extra-cmake-modules
              qt6-declarative
-             qt6-doc
              qt6-tools)
 optdepends=('qt6-declarative: QML bindings')
 groups=(kf6)
 source=(https://download.kde.org/stable/frameworks/${pkgver%.*}/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('c9d2110daf2e4d59d58b4af63c54fd517bb0f46591a91c20789ffc715eeb62ce'
+sha256sums=('5005f39b72578569a0cb9523e57cf8e62e81572326fc691be9fbecf28e638ea8'
             'SKIP')
 validpgpkeys=(53E6B47B45CEA3E0D5B7457758D0EE648A48B3BB # David Faure <faure@kde.org>
               E0A3EB202F8E57528E13E72FD7574483BB57B18D # Jonathan Esk-Riddell <jr@jriddell.org>
@@ -33,8 +32,7 @@ validpgpkeys=(53E6B47B45CEA3E0D5B7457758D0EE648A48B3BB # David Faure <faure@kde.
 
 build() { 
   cmake -B build -S $pkgname-$pkgver \
-    -DBUILD_TESTING=OFF \
-    -DBUILD_QCH=ON
+    -DBUILD_TESTING=OFF
   cmake --build build
 }
 
