--- a/world/kstatusnotifieritem/PKGBUILD
+++ b/world/kstatusnotifieritem/PKGBUILD
@@ -1,7 +1,7 @@
 # Maintainer: Antonio Rojas <arojas@archlinux.org>
 
 pkgname=kstatusnotifieritem
-pkgver=6.14.0
+pkgver=6.15.0
 pkgrel=1
 pkgdesc='Implementation of Status Notifier Items'
 arch=(x86_64)
@@ -16,12 +16,11 @@ makedepends=(doxygen
              pyside6
              python-build
              python-setuptools
-             qt6-doc
              qt6-tools)
 optdepends=('pyside6: Python bindings')
 groups=(kf6)
 source=(https://download.kde.org/stable/frameworks/${pkgver%.*}/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('9d85c44a7704ad052740752106e59eb26e49d80467f9b1d3c92bd24b77395417'
+sha256sums=('24132cc967570478b54e44eef1063c193217801260dc51860e0881fa0d90bd0d'
             'SKIP')
 validpgpkeys=(53E6B47B45CEA3E0D5B7457758D0EE648A48B3BB # David Faure <faure@kde.org>
               E0A3EB202F8E57528E13E72FD7574483BB57B18D # Jonathan Esk-Riddell <jr@jriddell.org>
@@ -30,8 +29,7 @@ validpgpkeys=(53E6B47B45CEA3E0D5B7457758D0EE648A48B3BB # David Faure <faure@kde.
 
 build() {
   cmake -B build -S $pkgname-$pkgver \
-    -DBUILD_TESTING=OFF \
-    -DBUILD_QCH=ON
+    -DBUILD_TESTING=OFF
   cmake --build build
 }
 
